# ollama-k80

./: CMakeLists.txt  CMakePresets.json  Dockerfile  Dockerfile.cuda
api/: types.go
cmake/modules/: K80Optimizations.cmake
config/: k80_config.yaml
cuda/: config.go
gpu/: advanced_tuner.go  auto_tuner.go  cahe_manager.go  detector.go  error__handler.go  error_types.go  k80_optimizer.go  metrics_collector.go  monitor.go  performance_monitor.go  resources_manager.go
gpu/monitor/: monitor.go
gpu/profiler/: profiler.go
gpu/recovery/: recovery.go
gpu/scheduler/: scheduler.go
ml/backend/ggml/ggml/src/ggml-cuda/: CMakeLists.txt  common.cuh  cuda-device.h  cuda-kernels.h  im2col.cu  mmq.cuh  mmv.cu  softmax.cu
